--- a/Application/EdFi.Ods.SandboxAdmin.Web/Views/Shared/JavascriptVariables.cshtml
+++ b/Application/EdFi.Ods.SandboxAdmin.Web/Views/Shared/JavascriptVariables.cshtml
@@ -6,7 +6,7 @@
 -->
 
 @using System.Configuration
-@using EdFi.Ods.Common.Http.Extensions
+@using EdFi.Ods.Admin.Extensions
 @{
     var homeUrl = "~".ToAbsolutePath();
     var oauthUrl = ConfigurationManager.AppSettings["OAuthUrl"];
